Bug 78741 - can't compile git://anongit.freedesktop.org/systemd/systemd
Summary: can't compile git://anongit.freedesktop.org/systemd/systemd
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-15 12:27 UTC by andy.boettger
Modified: 2014-05-28 12:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
./configure > configure.log (124.21 KB, text/plain)
2014-05-15 14:39 UTC, andy.boettger
Details
make V=1 > make.log (193.44 KB, text/plain)
2014-05-15 14:42 UTC, andy.boettger
Details

Description andy.boettger 2014-05-15 12:27:19 UTC
In file included from src/core/socket.c:33:0:
/usr/include/x86_64-linux-gnu/sys/xattr.h:31:3: error: expected identifier before numeric constant
   XATTR_CREATE = 1, /* set value, fail if attr already exists.  */
   ^
make[2]: *** [src/core/libsystemd_core_la-socket.lo] Fehler 1
make[1]: *** [all-recursive] Fehler 1
make: *** [all] Fehler 2
Comment 1 Zbigniew Jedrzejewski-Szmek 2014-05-15 13:59:45 UTC
That's strange. Can you provide the full output from ./configure && make V=1 ?
Comment 2 andy.boettger 2014-05-15 14:39:08 UTC
Created attachment 99097 [details]
./configure > configure.log
Comment 3 andy.boettger 2014-05-15 14:42:24 UTC
Created attachment 99098 [details]
make V=1 > make.log

[aboettger:~/src/systemd] master ± make V=1 > make.log        
/usr/include/x86_64-linux-gnu/bits/poll2.h: In function 'bus_poll':
/usr/include/x86_64-linux-gnu/bits/poll2.h:71:2: warning: call to '__ppoll_chk_warn' declared with attribute warning: ppoll called with fds buffer too small file nfds entries [enabled by default]
  return __ppoll_chk (__fds, __nfds, __timeout, __ss, __bos (__fds));
  ^
In file included from src/core/socket.c:33:0:
/usr/include/x86_64-linux-gnu/sys/xattr.h:31:3: error: expected identifier before numeric constant
   XATTR_CREATE = 1, /* set value, fail if attr already exists.  */
   ^
Comment 4 andy.boettger 2014-05-15 14:42:57 UTC
Comment on attachment 99097 [details]
./configure > configure.log

[aboettger:~/src/systemd] master ± ./configure > configure.log
configure: WARNING:
***
*** The config script /usr/bin/libgcrypt-config was
*** built for x86_64-pc-linux-gnu and thus may not match the
*** used host x86_64-unknown-linux-gnu.
*** You may want to use the configure option --with-libgcrypt-prefix
*** to specify a matching config script.
***
Comment 5 andy.boettger 2014-05-15 14:43:26 UTC
configure log and make log
Comment 6 Zbigniew Jedrzejewski-Szmek 2014-05-16 02:39:16 UTC
Can't reproduce this. This seems to be some issue with your local installation.
Comment 7 Camilo Aguilar 2014-05-28 02:19:41 UTC
This issue is being tracked upstream already: https://bugs.launchpad.net/ubuntu/+source/attr/+bug/1288091

If anybody knows of a workaround, I would love to hear about it.
Comment 8 Kay Sievers 2014-05-28 09:46:21 UTC
Removed libattr's <attr/xattr.h> and switched to glibc's <sys/xattr.h>:
  http://cgit.freedesktop.org/systemd/systemd/commit/?id=d2edfae0f9bdbecf6a8518e2a5bcf06f470e0d9e

Please check if that fixes the issue. Thanks.
Comment 9 andy.boettger 2014-05-28 12:11:28 UTC
It works now, thank you


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.